# TRABALHO-DE-EXCLUSAO-MUTUA-EM-SISTEMAS-DISTRIBUIDOS

./: .gitignore  README.MD  Untitled Diagram.drawio  __init__.py  pyproject.toml
app/: __main__.py  client.py  coordinator.py  message.py  process.py  server.py  supertest.py
client/: __init__.py
server/: __init__.py
